Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100360

Crash in qt3d/src/render/jobs/renderviewjobutils.cpp (207)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.4
    • 6.2.3
    • Qt3D
    • None
    • Windows

    Description

      Hi,

      I'm working on porting my application from Qt5 to Qt6. I'm getting a crash in qt3d/src/render/jobs/renderviewjobutils.cpp line 207 because node==nullptr in the statement

      if (node->isEnabled() && stateSet->canAddStateOfType(node->type())) {

      The crash goes away if I add a guard for this

      if (node && node->isEnabled() && stateSet->canAddStateOfType(node->type())) {
      

      But I guess this crash is a symptom of another bug somewhere that causes node to be nullptr in the first place. I'm not quite sure how to debug that. From the context I assume it is related to a renderstate, but I have not yet been able to create a simple example that isolates the bug. 

       

      Note that the code works fine in Qt5, including the latest 5.15.

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            seanharmer Sean Harmer
            harald Harald Vistnes
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes