Avoid dereferencing nullptr

In addStatesToRenderStateSet, when looking up a state ID, the returned RenderStateNode can be null, causing a crash. Added a guard to avoid dereferencing the pointer if it is nullptr.

Task-number: QTBUG-100360
Pick-to: 6.3
Change-Id: Id5c8551cd10805421a11724fb80b48ef5823c246
Reviewed-by: Mike Krus <mike.krus@kdab.com>